--- a/index.html
+++ b/index.html
@@ -401,89 +401,127 @@
 	</div>
 </section>
 <section class="videos section">
-	<div class="container">
-		<div class="videos-inner section-inner">
-			<div class="videos-head">
-				<h2 class="videos-heading title small fade-down">
-					Видеоматериалы по теме
-				</h2>
-				<div class="swiper-nav fade-down">
-					<div class="swiper-button swiper-button-prev">
-						<svg class="swiper-button-icon">
-							<use xlink:href="assets/images/symbol/icons.svg#arrow-left"></use>
-						</svg>
+	<div class="section-inner">
+		<div class="videos-top">
+			<div class="container">
+				<div class="videos-top-inner">
+					<div class="videos-head">
+						<h2 class="videos-heading title small fade-down">
+							Видеоматериалы по теме
+						</h2>
+						<div class="swiper-nav fade-down">
+							<div class="swiper-button swiper-button-prev">
+								<svg class="swiper-button-icon">
+									<use xlink:href="assets/images/symbol/icons.svg#arrow-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button swiper-button-next">
+								<svg class="swiper-button-icon">
+									<use xlink:href="assets/images/symbol/icons.svg#arrow-right"></use>
+								</svg>
+							</div>
+						</div>
 					</div>
-					<div class="swiper-button swiper-button-next">
-						<svg class="swiper-button-icon">
-							<use xlink:href="assets/images/symbol/icons.svg#arrow-right"></use>
-						</svg>
+					<div class="slider">
+						<div class="swiper">
+							<div class="swiper-wrapper">
+								<div class="video-card swiper-slide">
+									<div class="video-card-inner fade-down">
+										<img class="video-card-img" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
+										<svg class="play-icon">
+											<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+										</svg>
+										<div class="video-card-content">
+											<p class="video-card-text">
+												«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
+											</p>
+											<span class="video-card-date">10.10.2023</span>
+											<svg class="video-card-content-play-icon">
+												<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+											</svg>
+										</div>
+									</div>
+								</div>
+								<div class="video-card swiper-slide">
+									<div class="video-card-inner fade-down">
+										<img class="video-card-img" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
+										<svg class="play-icon">
+											<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+										</svg>
+										<div class="video-card-content">
+											<p class="video-card-text">
+												«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
+											</p>
+											<span class="video-card-date">10.10.2023</span>
+											<svg class="video-card-content-play-icon">
+												<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+											</svg>
+										</div>
+									</div>
+								</div>
+								<div class="video-card swiper-slide">
+									<div class="video-card-inner fade-down">
+										<img class="video-card-img" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
+										<svg class="play-icon">
+											<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+										</svg>
+										<div class="video-card-content">
+											<p class="video-card-text">
+												«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
+											</p>
+											<span class="video-card-date">10.10.2023</span>
+											<svg class="video-card-content-play-icon">
+												<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+											</svg>
+										</div>
+									</div>
+								</div>
+								<div class="video-card swiper-slide">
+									<div class="video-card-inner fade-down">
+										<img class="video-card-img" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
+										<svg class="play-icon">
+											<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+										</svg>
+										<div class="video-card-content">
+											<p class="video-card-text">
+												«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
+											</p>
+											<span class="video-card-date">10.10.2023</span>
+											<svg class="video-card-content-play-icon">
+												<use xlink:href="assets/images/symbol/icons.svg#play"></use>
+											</svg>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="slider">
-				<div class="swiper">
-					<div class="swiper-wrapper">
-						<div class="video-card swiper-slide">
-							<img class="video-card-img fade-down" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
-							<svg class="play-icon">
-								<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-							</svg>
-							<div class="video-card-content">
-								<p class="video-card-text">
-									«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
-								</p>
-								<span class="video-card-date">10.10.2023</span>
-								<svg class="video-card-content-play-icon">
-									<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-								</svg>
-							</div>
-						</div>
-						<div class="video-card swiper-slide">
-							<img class="video-card-img fade-down" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
-							<svg class="play-icon">
-								<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-							</svg>
-							<div class="video-card-content">
-								<p class="video-card-text">
-									«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
-								</p>
-								<span class="video-card-date">10.10.2023</span>
-								<svg class="video-card-content-play-icon">
-									<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-								</svg>
-							</div>
-						</div>
-						<div class="video-card swiper-slide">
-							<img class="video-card-img fade-down" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
-							<svg class="play-icon">
-								<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-							</svg>
-							<div class="video-card-content">
-								<p class="video-card-text">
-									«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
-								</p>
-								<span class="video-card-date">10.10.2023</span>
-								<svg class="video-card-content-play-icon">
-									<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-								</svg>
-							</div>
-						</div>
-						<div class="video-card swiper-slide">
-							<img class="video-card-img fade-down" src="assets/images/video-img-1.jpg" alt="Видеоматериалы по теме">
-							<svg class="play-icon">
-								<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-							</svg>
-							<div class="video-card-content">
-								<p class="video-card-text">
-									«Банкротство как способ разрешения корпоративных конфликтов» – выступление Денисова А.В ...
-								</p>
-								<span class="video-card-date">10.10.2023</span>
-								<svg class="video-card-content-play-icon">
-									<use xlink:href="assets/images/symbol/icons.svg#play"></use>
-								</svg>
-							</div>
-						</div>
-					</div>
+		</div>
+		<div class="videos-bottom">
+			<div class="container">
+				<div class="videos-bottom-inner">
+					<ul class="logos-group">
+						<li class="logos-group-item fade-down">
+							<img src="assets/images/partner-logo-1.png" alt="">
+						</li>
+						<li class="logos-group-item fade-down">
+							<img src="assets/images/partner-logo-2.png" alt="">
+						</li>
+						<li class="logos-group-item fade-down">
+							<img src="assets/images/partner-logo-3.png" alt="">
+						</li>
+						<li class="logos-group-item fade-down">
+							<img src="assets/images/partner-logo-4.png" alt="">
+						</li>
+						<li class="logos-group-item fade-down">
+							<img src="assets/images/partner-logo-5.png" alt="">
+						</li>
+						<li class="logos-group-item fade-down">
+							<img src="assets/images/partner-logo-6.png" alt="">
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
