--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/libs/fonts.css" />
     <link rel="stylesheet" href="assets/css/libs/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <title>АВИАЭКСПО</title>
+    <title>Генезис</title>
 </head>
 
 <body>
